fix trending currencies alignment with neighboring newsfeed tile

--- a/components/TrendingCurrenciesTable/TrendingCurrenciesTable.module.scss
+++ b/components/TrendingCurrenciesTable/TrendingCurrenciesTable.module.scss
@@ -1,11 +1,12 @@
 .TrendingCurrenciesTableContainer {
-    padding: 5px 25px;
+    padding: 25px;
 }
 
 .TrendingCurrenciesTitle {
     display: flex;
     align-items: center;
     justify-content: left;
+    margin-bottom: 18px;
 
     &__icon {
         margin-right: 12px;
